--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                       </svg>
                       CodeSignal
                     </h6>
-                    <a href="https://gist.github.com/ppauliuchenka02/7ef005b7c1b0ddac341f128443f15cbc" class="text-secondary" target="_blank">Level 3</a>
+                    <a href="https://gist.github.com/ppauliuchenka02/7ef005b7c1b0ddac341f128443f15cbc" class="text-secondary" target="_blank">Solved Problems</a>
                   </li>
                 </ul>
               </div>
