--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 </li>
               </ul>
             </div>
-            <div class="card mt-2">
+<!--             <div class="card mt-2">
               <div class="card-body">
                 <h5>GitHub Gists</h5>
                 <ul class="list-group">
@@ -94,7 +94,7 @@
                   </li>
                 </ul>
               </div>
-            </div>
+            </div> -->
             <!-- Follow links - end -->
           </div>
           <!-- Left column - end -->
