--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                       </svg>
                       GitHub
                   </h6>
-                  <a href="https://github.com/palinapauliuchenka" class="text-secondary">@ppauliuchenka02</a>
+                  <a href="https://github.com/ppauliuchenka02" class="text-secondary">@ppauliuchenka02</a>
                 </li>
                 <li class="list-group-item d-flex align-items-center justify-content-between flex-wrap">
                   <h6 class="mb-0 d-flex align-items-center">
