--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
                     <h4>Palina Pauliuchenka</h4>
                     <p class="text-secondary mb-1">Software Engineer</p>
                     <p class="text-muted font-size-sm">Boca Raton, FL 33431, USA</p>
-                    <a href="./documents/cv_pauliuchenka.pdf" class="btn btn-outline-dark" target="_blank">Resume</a>
+                    <a href="./documents/cv_pauliuchenka.pdf" class="btn btn-outline-dark" target="_blank">CV</a>
+                    <a href="./documents/resume_pauliuchenka.pdf" class="btn btn-outline-dark" target="_blank">Resume</a>
                   </div>
                 </div>
               </div>
