--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
       <link rel="stylesheet" href="./src/styles/main.css">
   </head>
   <body class="bg-light">
-
+<!-- hello -->
+    <p>test of the vs code web</p>
     <main id="root">
       <div class="container">
         <div class="row g-2">
